# sapphire

./: .buildinfo  .bzrignore  .gitignore  .travis.yml  CorsikaBlocks.py  CorsikaFile.py  CorsikaParticles.py  CorsikaUnits.py  LICENSE  Makefile  README  README.md  README.rst  TODO  __init__.py  analysis.html  analysis.py  analysis_detector_sim.py  analysis_kascade.py  analyze_shower_front.py  angles.py  api.html  build_dataset.py  build_timing_sets.py  cluster_definition.py  clusters.html  clusters.py  configuration.html  conv_landau_fit.py  core.py  corsika.html  create_tables.py  data.html  detector_sim.py  develop.sh  download_data.py  dtgraphs.py  esd.html  event_generator.py  examples.html  (+55 more)
.doctrees/: analysis.doctree  api.doctree  clusters.doctree  configuration.doctree  corsika.doctree  data.doctree  environment.pickle  esd.doctree  examples.doctree  index.doctree  installation.doctree  kascade.doctree  publicdb.doctree  qsub.doctree  sapphire.doctree  simulations.doctree  storage.doctree  tests.doctree  time_util.doctree  transformations.doctree  tutorial.doctree  utils.doctree
.doctrees/analysis/: calibration.doctree  coincidence_queries.doctree  coincidences.doctree  core_reconstruction.doctree  direction_reconstruction.doctree  event_utils.doctree  find_mpv.doctree  landau.doctree  process_events.doctree  process_traces.doctree  reconstructions.doctree  signal_calibration.doctree  time_deltas.doctree
.doctrees/corsika/: blocks.doctree  corsika_queries.doctree  generate_corsika_overview.doctree  particles.doctree  qsub_corsika.doctree  qsub_store_corsika_data.doctree  reader.doctree  store_corsika_data.doctree  units.doctree
.doctrees/data/: extend_local_data.doctree  update_local_data.doctree
.doctrees/simulations/: base.doctree  detector.doctree  gammas.doctree  ldf.doctree  (+2 more)
.externalToolBuilders/: DIRREC.launch  Unit Tests.launch
_sources/: analysis.rst.txt  api.rst.txt  clusters.rst.txt  configuration.rst.txt  corsika.rst.txt  data.rst.txt  index.rst.txt  installation.rst.txt  kascade.rst.txt  qsub.rst.txt  sapphire.rst.txt  simulations.rst.txt  storage.rst.txt  tests.rst.txt  time_util.rst.txt  tutorial.rst.txt
aires/: .gitignore  do_aires_sim.sh  do_aires_sim_e14-angle-22_5.sh  do_aires_sim_e15-angle-10.sh  do_aires_sim_e15-angle-22_5.sh  do_aires_sim_e15-angle-35.sh  do_aires_sim_e15-angle-45.sh  do_aires_sim_e15-angle-5.sh  showere15-angle-0-2.t3005  sime14.inp  sime15-angle-0.inp  sime15-angle-15.inp  sime15-angle-22_5.inp  sime15-angle-35.inp  sime15-angle-45.inp  sime15-angle-5.inp  sime15.inp
analysis/: .gitignore  DIR-testdata.h5  calibration.html  cluster_sim.py  coincidence_queries.html  coincidences.html  core_reconstruction.html  core_reconstruction.py  detector_sim.py  direction_reconstruction.html  direction_reconstruction.py  event_utils.html  find_mpv.html  landau.html  master.py  plot_coordinate_systems.py  process_events.html  process_traces.html  reconstructions.html  signal_calibration.html  store_aires_data.py  test_coordinate_transform.py  test_direction_reconstruction_acceptance.py  time_deltas.html  utils.py
corsika/: CorsikaBlocks.py  CorsikaUnits.py  blocks.html  corsika_queries.html  generate_corsika_overview.html  particles.html  qsub_corsika.html  qsub_store_corsika_data.html  reader.html  reader.py  store_corsika_data.html  units.html
data/: extend_local_data.html  update_local_data.html
deprecated/: storage.py
doc/: Makefile  README.rst  analysis.rst  base.rst  blocks.rst  clusters.rst  coincidences.rst  conf.py  configuration.rst  core_reconstruction.rst  corsika.rst  corsika_qsub.rst  corsika_reader.rst  direction_reconstruction.rst  esd.rst  eventwarehouse.rst  examples.rst  file.rst  gpstime.rst  groundparticles.rst  index.rst  install.rst  installation.rst  intro.rst  kascade.rst  landau.rst  ldf.rst  log-replay.rst  make.bat  particles.rst  process_events.rst  publicdb.rst  qsub.rst  reader.rst  sapphire.rst  simulations.rst  storage.rst  subst.inc  time_util.rst  transformations.rst  (+3 more)
docs/: analysis.rst  conf.py  index.rst  log-replay.rst  subst.inc  utils.rst
examples/: ettyhillesum.py  example2.py  jos.py  kvi.py  sceindhoven.py  sciencepark.py
framework/: README
hisparc/: __init__.py  containers.py  eventwarehouse.py  kascade.py  publicdb.py
kascade/: .gitignore  analysis_kascade.py  direction_reconstruction.py  event_generator.py  master.py  old_analysis_kascade.py  plot_matching_events.py  plot_pulseheight_histogram.py  reconstruction_efficiency.py  rel_gauss.py  test.py  test2.py  test_tcc.py  utils.py
old/: build_csv_sets.py  build_timing_sets.py  errorgraph.py  integral.py  jos.py  script.py  trigger_prob.py
read_sqldump/: legacy.py  read_sqldump.py  storage.py
reconstruction_efficiency/: analysis_kascade.py  conv_landau_fit.py  landau.py  nkg.py  plot_utils.py  plots_cuts.py  swaarde+.py  swaarde.py
sapphire/: README  README.md  __init__.py  _version.py  api.py  clusters.py  esd.py  gpstime.py  kascade.py  publicdb.py  qsub.py  storage.py  time_util.py  transformations.py  utils.py  version.py
sciencepark/: TODO  determine_offsets_for_single_day.py  direction_analysis_plots.py  master-simulations.py  master-single-station.py  master.py  plot_trace.py  single-direction_analysis_plots.py  transformations.py  try-master-single-station.py
scripts/: README.rst
sim/: .gitignore  do_aires_sim.sh  sime15.inp  sime16.inp
simulations/: .gitignore  __init__.py  analyze_shower_front.py  base.html  base.py  core_reconstruction.py  detector.html  direction_reconstruction.py  ffs_direction_reconstruction.py  front-passage-vs-R.tex  front-passage.tex  gammas.html  groundparticles.html  ldf.html  ldf_sim.py  ldf_sim_to_model.py  master.py  myshowerfront.py  plot_coordinate_systems.py  qsub.py  qsub.sh  random_energy.py  showerfront.html  store_aires_data.py  test_coordinate_transform.py  toy_energy_densities.py  utils.py
sphinx/: CorsikaFile.rst  conf.py
src/: clusters.py  storage.py
transformations/: angles.html  axes.html  base.html  celestial.html  clock.html  geographic.html
(+1829 files in other folders)
